# netatalk

./: configure.ac  configure.in
config/: Makefile.am
etc/: Makefile.am
etc/afpd/: Makefile.am  acl_mappings.h  acls.c  acls.h  auth.c  main.c  uam.c
etc/cnid_dbd/: cnid_metad.c
etc/uams/: Makefile.am  uams.h  uams_dhx2_pam.c  uams_dhx_pam.c
include/atalk/: acl.h  ea.h
libatalk/acl/: unix.c
libatalk/util/: socket.c
sys/netatalk/: at.h
